--- a/index.html
+++ b/index.html
@@ -83,60 +83,69 @@ color: black;
 
 p{
 color: black;
-padding: 0px 10% 10px 10%;
+width: 80%;
 text-align: justify;
+float: center;
 }
 
-.columncontainer{
-display: table;
+#container{
+text-align: justify;
+padding: 10px;
 width: 80%;
 margin: auto;
 
 }
 .columns{
 display: table-cell;
-margin: auto;
-columns: 3;
-color: charcoal;
+columns: 100px 3;
+color: black;
 text-align: justify;
 padding: 15px;
 background: #f2f2f2;
 }
 
 .column2{
-padding: 10px;
+width: 80%;
+display: table-cell;
 columns: 2;
 margin: auto;
 color: charcoal;
 text-align: justify;
-width: 80%;
 }
 
 .avatar{
+margin: auto;
+display: block;
+padding: 8px;
 background: #f2f2f2;
-padding: 10px;
 border: 2px dashed #202020;
 text-align: center;
 }
 
-.faux-block{
+.faux-blocka{
 opacity: 0%;
 background: #f2f2f2;
-padding: 4px;
-
+padding: 5px;
 }
+
+.faux-blockb{
+opacity: 0%;
+background: #f2f2f2;
+padding: 3px;
+}
+
 
 #color{
 border: 1px solid black;
 width: 98%;
-height: 30px;
+height: 31px;
 }
 
 .colora{
 background: black;
 padding:0px;
 width: 25%;
-height: 30px;
+height: 31px;
 float: left;
 }
 
@@ -144,7 +153,7 @@ float: left;
 background: grey;
 padding: 0px;
 width: 25%;
-height: 30px;
+height: 31px;
 float: left;
 }
 
@@ -152,7 +161,7 @@ float: left;
 background: lightgrey;
 padding: 0px;
 width: 25%;
-height: 30px;
+height: 31px;
 float: left;
 }
 
@@ -160,7 +169,7 @@ float: left;
 background: white;
 padding: 0px;
 width: 25%;
-height: 30px;
+height: 31px;
 float: left;
 }
 
@@ -199,45 +208,48 @@ NULLØ
 
 
 <h1>MONO//SPACED</h1>
-<p align="justify">A MONOSPACED PARADIGM TO SEPARATE TWO ENTITIES, SUN AND MOON. IT'LL NEVER COLLIDE WITH EACH OTHER, TWO SEPARATE AND DIFFERENT WORLDS. IT WAS SOL AND LUNA, FIRE AND WATER, SPACED BY A CHROMATICAL PLACE NAMED EARTH. IT'S THE SAME LIKE US, TWO DIFFERENT ENTITIES WITH DIFFERENT MIND, VOW TO LIVE AND SHARE OUR LIFE TOGETHER. TILL DEATH DO US APART.</p>
+<div id="container">
+A MONOSPACED PARADIGM TO SEPARATE TWO ENTITIES, SUN AND MOON. IT'LL NEVER COLLIDE WITH EACH OTHER, TWO SEPARATE AND DIFFERENT WORLDS. IT WAS SOL AND LUNA, FIRE AND WATER, SPACED BY A CHROMATICAL PLACE NAMED EARTH. IT'S THE SAME LIKE US, TWO DIFFERENT ENTITIES WITH DIFFERENT MIND, VOW TO LIVE AND SHARE OUR LIFE TOGETHER. TILL DEATH DO US APART.
+</div>
 
 
-
-<div class="columncontainer">
-	<div class="columns">
+<div id="container">
+<div class="columns">
 <div class="avatar">
+
 NULLØ / MONOSPACED
 </div>
 
-<div class="faux-block"></div>
+<div class="faux-blocka"></div>
 A MONOSPACED YOU AND ME, IT IS BETWEEN TWO WORLDS, BETWEEN A DREAMLAND AND A FANTASYLAND. YOU AND ME LIKE SUN AND MOON, MET ONLY BY THE GOLDEN HOUR. THIS IS A MONOSPACED PARAGRAPH TO SEPARATE US, TO MAKE A DIFFERENCE KNOWN BETWEEN TWO PEOPLE. IT'S YOU AND ME TO DECIDE, WHETHER TO VOW TO LIVE AND SHARE OUR LIFE OR TO SEPARATED BY THIS MONOSPACED SPACE BETWEEN REALITY.
 A MONOSPACED YOU AND ME, IT IS BETWEEN TWO WORLDS, BETWEEN A DREAMLAND AND A FANTASYLAND. YOU AND ME LIKE SUN AND MOON, MET ONLY BY THE GOLDEN HOUR. THIS IS A MONOSPACED PARAGRAPH TO SEPARATE US, TO MAKE A DIFFERENCE KNOWN BETWEEN TWO PEOPLE. IT'S YOU AND ME TO DECIDE, WHETHER TO VOW TO LIVE AND SHARE OUR LIFE OR TO SEPARATED BY THIS MONOSPACED SPACE BETWEEN REALITY.
-</div>
-</div>
-<br>
+</div></div></div>
 
+
+<div id="container">
 <div class="column2">
-// MONOSPACED COLOR PALETTE SHADES //
-<br>
-<div class="faux-block"></div>
+MONOSPACE COLOR PALETTE SHADES //BLGW//
+
+<div class="faux-blockb"></div>
 <div id="color">
 <div class="colora"></div>
 <div class="colorb"></div>
 <div class="colorc"></div>
 <div class="colord"></div>
 </div>
-<div class="faux-block"></div>
+<div class="faux-blockb"></div>
 A MONOSPACED YOU AND ME, IT IS BETWEEN TWO WORLDS, BETWEEN A DREAMLAND AND A FANTASYLAND. YOU AND ME LIKE SUN AND MOON, MET ONLY BY THE GOLDEN HOUR. THIS IS A MONOSPACED PARAGRAPH TO SEPARATE US, TO MAKE A DIFFERENCE KNOWN BETWEEN TWO PEOPLE. IT'S YOU AND ME TO DECIDE.
 
 A MONOSPACED YOU AND ME, IT IS BETWEEN TWO WORLDS, BETWEEN A DREAMLAND AND A FANTASYLAND. YOU AND ME LIKE SUN AND MOON, MET ONLY BY THE GOLDEN HOUR. THIS IS A MONOSPACED PARAGRAPH TO SEPARATE US, TO MAKE A DIFFERENCE KNOWN BETWEEN TWO PEOPLE. IT'S YOU AND ME TO DECIDE, WHETHER TO VOW TO LIVE AND SHARE OUR LIFE OR TO SEPARATED BY THIS MONOSPACED SPACE BETWEEN REALITY.
 A MONOSPACED YOU AND ME, IT IS BETWEEN TWO WORLDS, BETWEEN A DREAMLAND AND A FANTASYLAND. YOU AND ME LIKE SUN AND MOON, MET ONLY BY THE GOLDEN HOUR. IT'S YOU AND ME TO DECIDE.
+</div></div>
+
+<div id="container">
+A MONOSPACED YOU AND ME, IT IS BETWEEN TWO WORLDS, BETWEEN A DREAMLAND AND A FANTASYLAND. YOU AND ME LIKE SUN AND MOON, MET ONLY BY THE GOLDEN HOUR. THIS IS A MONOSPACED PARAGRAPH TO SEPARATE US, TO MAKE A DIFFERENCE KNOWN BETWEEN TWO PEOPLE. IT'S YOU AND ME TO DECIDE, WHETHER TO VOW TO LIVE AND SHARE OUR LIFE OR TO SEPARATED BY THIS MONOSPACED SPACE BETWEEN REALITY.</p>
 </div>
-
-<p>A MONOSPACED YOU AND ME, IT IS BETWEEN TWO WORLDS, BETWEEN A DREAMLAND AND A FANTASYLAND. YOU AND ME LIKE SUN AND MOON, MET ONLY BY THE GOLDEN HOUR. THIS IS A MONOSPACED PARAGRAPH TO SEPARATE US, TO MAKE A DIFFERENCE KNOWN BETWEEN TWO PEOPLE. IT'S YOU AND ME TO DECIDE, WHETHER TO VOW TO LIVE AND SHARE OUR LIFE OR TO SEPARATED BY THIS MONOSPACED SPACE BETWEEN REALITY.</p>
-
 //MONOSPACED//
 MARCH 2020 PROJECT//
-
+</div>
 <div id="footer">
 
 2020©NULLØ
