--- a/null.html
+++ b/null.html
@@ -266,10 +266,13 @@ yourself in ‘sometimes’ an unfathomable art.<br>
 - codename // nullØ -
 </div></div>
 
-
+<br><br>
+<div id="hcontainer">
+<p align="center">
+// semicolon_project // march_2020 //
+</p></div>
 
 <div id="faux-footer"></div>
-
 <div id="footer">
 //NULLØ_SEMICOLON_PROJECT//MARCH_2020//
 
